big changes to design + functionality

--- a/index.html
+++ b/index.html
@@ -9,17 +9,30 @@
 
 <div class="container">
     <div class="left-column">
-        <div class="intro">
-            <img src="img/placeholder.jpg" alt=""> <!-- replace placeholder with image-->
-            <h1> Oliver Anderson </h1>
+        <div class="left">
+            <h1>OLIVER ANDERSON</h1>
         </div>
+    </div>
 
+    <div class="right-column">
         <div class="info-box">
             <h1>About me:</h1>
             <p> Hello, my name is Oliver Anderson. I am a student on the verge of finishing secondary school.
                 In the last two years I have developed a love for computer science and I aspire to build a
                 meaningful career in Computer Science.
             </p>
+        </div>
+
+        <div class="info-box">
+            <h1>Skills:</h1>
+            <ul>
+                <li>Problem-solving skills</li>
+                <li>Hardworking</li>
+                <li>Teamwork skills</li>
+                <li>Willingness to learn</li>
+                <li>Attention to detail</li>
+                <li>Flexibility</li>
+            </ul>
         </div>
 
         <div class="info-box">
@@ -45,18 +58,33 @@
                 <li>...</li>
             </ul>
         </div>
-    </div>
 
-    <div class="right-column">
-        <div class="intro">
-            <h2>Projects: </h2>
+        <div class="info-box">
+            <h1>GitHub Projects:</h1>
+            <ul>
+                <li>Link 1</li>
+                <li>Link 2</li>
+                <li>Link 3</li>
+                <li>Link 4</li>
+                <li>Link 5</li>
+                <li>...</li>
+            </ul>
         </div>
-        <div class="project-box">
-            <h1>Example project 1:</h1>
-            <p> <br><br><br><br><br></p>
+
+
+        <div class="info-box">
+            <h1>Contact Me:</h1>
+            <ul>
+                <li>Email: oliveranderson2502@gmail.com</li>
+                <li>Phone number: 07939 520393</li>
+                <li>...</li>
+            </ul>
         </div>
     </div>
+</div>
 
+<div class="github-page">
+    <a href="https://github.com/Ollie476/oliveranderson" target="_blank">This website's GitHub page</a>
 </div>
 
 </body>
