--- a/index.html
+++ b/index.html
@@ -11,35 +11,56 @@
     <div class="left-column">
         <div class="left">
             <h1>OLIVER ANDERSON</h1>
+            <img src="Images/placeholder.jpeg" alt="">
         </div>
     </div>
 
     <div class="right-column">
         <div class="info-box">
+            <h1>Career Objective:</h1>
+            <p> Aspiring software developer with a strong foundation in programming and a passion
+                for building innovative digital solutions. Seeking opportunities to gain experience,
+                collaborate on real-world projects, whilst continuing to develop my technical and creative
+                abilities.
+            </p>
+        </div>
+
+        <div class="info-box">
             <h1>About me:</h1>
-            <p> Hello, my name is Oliver Anderson. I am a student on the verge of finishing secondary school.
-                In the last two years I have developed a love for computer science and I aspire to build a
-                meaningful career in Computer Science.
+            <p> Hello, my name is Oliver Anderson. I have just finished secondary school, and I am about to
+                start my A-level education studying Computer Science, Mathematics, Further Mathematics and Physics.
+                I'm passionate about technology, enjoy solving problems and love building things up from the ground.
+                I'm now seeking opportunities where I can apply my skills, grow as a developer and contribute to exciting
+                projects.
             </p>
         </div>
 
         <div class="info-box">
             <h1>Skills:</h1>
             <ul>
-                <li>Problem-solving skills</li>
-                <li>Hardworking</li>
-                <li>Teamwork skills</li>
-                <li>Willingness to learn</li>
-                <li>Attention to detail</li>
-                <li>Flexibility</li>
+                <li>Strong problem-solving abilities developed through coding and self-directed projects</li>
+                <li>Highly self-motivated with a strong work ethic</li>
+                <li>Collaborative team player who communicates effectively</li>
+                <li>Eager and quick to learn and adapt to new tools and technologies</li>
+                <li>Detail-oriented approach to debugging and clean coding practices</li>
+                <li>Adaptable and open-minded when facing new challenges</li>
             </ul>
         </div>
 
         <div class="info-box">
-            <h1>Programming Skills:</h1>
+            <h1>Hobbies:</h1>
+            <ul>
+                <li>Designing and developing games and software applications</li>
+                <li>Playing sports such as badminton and tennis to stay active and focused</li>
+                <li>Playing the piano as a creative and relaxing outlet</li>
+            </ul>
+        </div>
+
+        <div class="info-box">
+            <h1>Technologies used:</h1>
             <ul>
                 <li>Python</li>
-                <li>Web Development</li>
+                <li>Web Development (HTML, CSS, Javascript)</li>
                 <li>Engine Game Development (Unity and Godot)</li>
                 <li>C++</li>
                 <li>C#</li>
@@ -48,15 +69,14 @@
         </div>
 
         <div class="info-box">
-            <h1>Education:</h1>
-            <ul>
-                <li>Computer Science : [Grade]</li>
-                <li>Maths : [Grade]</li>
-                <li>Physics : [Grade]</li>
-                <li>GCSE 4 : [Grade]</li>
-                <li>GCSE 5 : [Grade]</li>
-                <li>...</li>
-            </ul>
+            <h1>Education</h1>
+            <p> To be determined</p>
+<!--            <ul>-->
+<!--                <li>GCSE Computer Science : [Grade]</li>-->
+<!--                <li>GCSE Maths : [Grade]</li>-->
+<!--                <li>GCSE Physics : [Grade]</li>-->
+<!--                <li>...</li>-->
+<!--            </ul>-->
         </div>
 
         <div class="info-box">
