--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="left-column">
         <div class="left">
             <h1>OLIVER ANDERSON</h1>
-            <img src="Images/placeholder.jpeg" alt="">
+            <img src="Images/oliveranderson.jpg" alt="">
         </div>
     </div>
 
@@ -70,26 +70,34 @@
 
         <div class="info-box">
             <h1>Education</h1>
-            <p> To be determined</p>
-<!--            <ul>-->
-<!--                <li>GCSE Computer Science : [Grade]</li>-->
-<!--                <li>GCSE Maths : [Grade]</li>-->
-<!--                <li>GCSE Physics : [Grade]</li>-->
-<!--                <li>...</li>-->
-<!--            </ul>-->
+            <p> I have completed the following GCSEs: </p>
+            <ul>
+                <li>Computer Science</li>
+                <li>Maths</li>
+                <li>Physics</li>
+                <li>Biology</li>
+                <li>Chemistry</li>
+                <li>Music</li>
+                <li>English Literature</li>
+                <li>English Language</li>
+                <li>History</li>
+                <li>Spanish</li>
+                <li>RE (short course)</li>
+            </ul>
+            <p><b>(results to be determined)</b></p>
         </div>
 
-        <div class="info-box">
-            <h1>GitHub Projects:</h1>
-            <ul>
-                <li>Link 1</li>
-                <li>Link 2</li>
-                <li>Link 3</li>
-                <li>Link 4</li>
-                <li>Link 5</li>
-                <li>...</li>
-            </ul>
-        </div>
+<!--        <div class="info-box">-->
+<!--            <h1>GitHub Projects:</h1>-->
+<!--            <ul>-->
+<!--                <li>Link 1</li>-->
+<!--                <li>Link 2</li>-->
+<!--                <li>Link 3</li>-->
+<!--                <li>Link 4</li>-->
+<!--                <li>Link 5</li>-->
+<!--                <li>...</li>-->
+<!--            </ul>-->
+<!--        </div>-->
 
 
         <div class="info-box">
@@ -97,7 +105,6 @@
             <ul>
                 <li>Email: oliveranderson2502@gmail.com</li>
                 <li>Phone number: 07939 520393</li>
-                <li>...</li>
             </ul>
         </div>
     </div>
