--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h1>Technologies used:</h1>
             <ul>
                 <li>Python</li>
-                <li>Web Development (HTML, CSS, Javascript)</li>
+                <li>Web Development (HTML, CSS, Javascript, node.js)</li>
                 <li>Engine Game Development (Unity and Godot)</li>
                 <li>C++</li>
                 <li>C#</li>
